--- a/libs/css/main.css
+++ b/libs/css/main.css
@@ -11,15 +11,34 @@ body{
   text-decoration: none;
 }.padding-top{
   padding-top: 20px;
-}.login-page{
-  width: 350px;
-  margin: 7% auto;
+}.login-page {
+  width: 90%; /* Use percentage width for responsiveness */
+  max-width: 350px; /* Set a max-width to maintain the desired width on larger screens */
+  margin: 80px auto; /* Center horizontally and keep the top margin */
+  margin-right: 45%;
   padding: 0 20px;
   background-color: #f9f9f9;
   border: 1px solid #f2f2f2;
-}.login-page .text-center{
+  border-radius: 10px;
+}
+
+.login-page .text-center {
   margin-bottom: 10px;
-}.box{
+}
+
+.login-form .btn {
+  width: 100%; 
+  padding: 10px; 
+  font-size: 16px; 
+  border-radius: 5px; 
+  transition: background-color 0.3s; 
+}
+
+.login-form .btn:hover {
+  background-color: #007bff; 
+  color: white; 
+}
+.box{
   padding: 20px;
   background-color: #f9f9f9;
   border: 1px solid #f2f2f2;
@@ -315,5 +334,3 @@ input[type=file]{
   width: 125px;
   height: 125px;
 }
-
-
